--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "webpack --production",
     "watch": "webpack -dw",
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +18,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^6.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -31,6 +34,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.2"
+    "mongodb": "^3.3.2",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   }
 }
